// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cleanBook cleanBook 1`] = `
{
  "authors": [
    "Yaa Gyasi",
  ],
  "categories": [
    "Fiction",
  ],
  "dateFinished": "2020-09-12",
  "dateStarted": undefined,
  "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
  "isbn": "0525658181",
  "language": "en",
  "link": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
  "notes": "I loved it!",
  "pageCount": 288,
  "printType": "BOOK",
  "publishedDate": "2020",
  "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
  "title": "Transcendent Kingdom",
}
`;

exports[`cleanBook cleanBook, no date 1`] = `
{
  "authors": [
    "Yaa Gyasi",
  ],
  "categories": [
    "Fiction",
  ],
  "dateFinished": "2020-01-01",
  "dateStarted": undefined,
  "description": "A novel about faith, science, religion, and family that tells the deeply moving portrait of a family of Ghanaian immigrants ravaged by depression and addiction and grief, narrated by a fifth year candidate in neuroscience at Stanford school of medicine studying the neural circuits of reward seeking behavior in mice…",
  "isbn": "0525658181",
  "language": "en",
  "link": "https://books.google.com/books/about/Transcendent_Kingdom.html?hl=&id=ty19yQEACAAJ",
  "notes": "I loved it!",
  "pageCount": 288,
  "printType": "BOOK",
  "publishedDate": "2020",
  "thumbnail": "https://books.google.com/books/content?id=ty19yQEACAAJ&printsec=frontcover&img=1&zoom=1&source=gbs_api",
  "title": "Transcendent Kingdom",
}
`;
